@@ -3,4 +3,4 @@ EXTRA_DIST =  expansions.m4 mono-uia.snk
 
 #EXTRA_DIST =  at-spi-sharp.dll.config.in
 
-SUBDIRS = at-spi tests
+SUBDIRS = at-spi data tests
