@@ -1,3 +1,7 @@
+2009-07-01  Mike Gorse  <mgorse@novell.com>
+
+	* makefile.am: Set Package to Accessibility.
+
 2009-05-21  Mike Gorse  <mgorse@novell.com>
 	* Selection.cs, Makefile.am: Add Selection binding.
 
